--- a/css/style.css
+++ b/css/style.css
@@ -121,4 +121,8 @@ input:focus {
   border: 2px solid #a883f2;
 }
 
+#cards-add-list {
+  min-width: 500px;
+}
+
 /*# sourceMappingURL=style.css.map */
